🐛 fix(server): 文档布局接口返回标准 JSON 对象，修复 Map.toString 非法序列化